# car-finder

./: .gitignore  API_KEYS.md  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml  run_local.py  setup.py
app/: __init__.py  config.py  database.py  main.py
app/alerts/: __init__.py  routes.py
app/chat/: __init__.py  extract.py  routes.py  system_prompt.py
app/ingest/: __init__.py  autodev.py  marketcheck.py
app/models/: schemas.py
app/tasks/: __init__.py  celery_app.py
app/tests/: test_chat.py
frontend/: Dockerfile  ENGAGEMENT_FEATURES.md  PRODUCT_ROADMAP.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalyticsInsights.jsx  ConversionOptimizer.jsx  EcosystemIntegration.jsx  MobileOptimized.jsx  Onboarding.jsx  PremiumFeatures.jsx  RichChatMessage.jsx  SkeletonLoader.jsx  SmartRecommendations.jsx  SocialFeatures.jsx
frontend/src/pages/: Alerts.jsx  Chat.jsx  Demo.jsx  Landing.jsx
scripts/: check_config.py  init_db.sql  run_e2e_demo.py  run_frontend.sh  run_minimal.py  setup.sh
