[project]
name = "car-finder"
version = "0.1.0"
description = "Option-Aware Car-Match Web App"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "supabase>=2.3.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "pgvector>=0.2.0",
    "openai>=1.9.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
    "twilio>=8.11.0",
    "email-validator>=2.1.0",
    "python-multipart>=0.0.6",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
    "mypy",
    "types-redis",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 